# orda

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/features/auth/: routes.py  schemas.py  service.py
backend/app/features/listings/: factory.py  models.py  routes.py  schemas.py  service.py  strategies.py
backend/app/features/notifications/: models.py  observer.py  routes.py  schemas.py  service.py
backend/app/features/users/: auth_routes.py  models.py  proxy.py  routes.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 1e272a42cab6_initial_migration.py  2264cf922ab7_remove_book_specific_fields.py  8e0f7cf8f9a3_add_user_id_to_subscription.py  9c5efffbc9f1_simplify_user_model.py  bca3a2ff0304_add_user_id_to_subscription.py  ddde4a629b5a_add_location_to_listing.py  f4cad45266d0_add_notification_model.py  f5edc45931a9_add_hashed_password_and_email_to_user.py  fea979322bbe_add_owner_id_to_listing.py
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/hooks/: useLocalStorage.ts
frontend/src/services/: api.ts  listings.ts  notifications.ts  users.ts
frontend/src/types/: index.ts
(+10 files in other folders)
