[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.125.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
